# soapquarify

./: Cargo.toml  README.md  acknowledgments.xml  file.xml  sample_qry_io.txt
.github/workflows/: rust.yml
src/: main.rs  mhf.rs  mytests.rs  myws.rs  stj.rs
