[package]
name = "stj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xml-rs = "0.6.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = {version = "1.0.89"}
#tokio = { version = "1.25.0", features = ["full"] }
ws = "0.9.2"
encrypto_sha256 = "0.1.1"
reqwest = { version = "0.11.3", features = ["stream","json"] }
#totp-lite = "2.0.0"
#totp-rs = "5.0.1"
clap = "4.1.6"
#encrypto_aes = "0.3.0"
keyring = "2.0.2"

[dev-dependencies]
num = { version = "0.4.0", default-features = false }
num-traits = "0.2.15"
num-bigint = { version = "0.4.3", features = ["rand"] }
rand = "0.8.5"
num-primes = "0.3.0"